added arrow key controls for search bar results

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,9 @@
 #date-range li:hover{
 	background-color: blue;
 }
+.highlighted{
+	background-color: red !important;
+}
 .results{
 	padding: 0;
 	list-style: none;
