--- a/css/main.css
+++ b/css/main.css
@@ -1,58 +1,94 @@
-#search-bar {
-	background-color: green;
+
+body {
+	background-color: #0E1623;
+	color: white;
 }
-#line-graph {
-	background-color: red;
+
+#date{
+	background-color: #1B2431;
+	padding-bottom: 15px;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
 }
-#profit {
-	background-color: blue;
-}
-#time-stamps{
-	background-color: purple;
-}
-#search{
+#date-range{
+	padding-top: 10px;
+	list-style: none;
+	margin-bottom: 0;
 	padding-left: 10px;
+	padding-right: 10px;
+}
+
+#search {
+	background-color: #1B2431;
+	width: inherit;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.right-buffer{
+	padding-right: 10px !important;
+}
+
+.bottom-buffer {
+	margin-bottom: 10px;
+}
+
+#searchBar {
 	width: inherit;
 }
+#results {
+	background-color: #1B2431;
+	padding: 0;
+	padding-left: 10px;
+	padding-right: 10px;
+	list-style: none;
+	margin-bottom: 0;
+}
+#results li{ 
+	background: #314151; 
+	padding-left: 10px;
+}
+#results li:nth-child(odd){ 
+	background: #1b2c42; 
+}
+
+.selected{
+	background-color: #383F59 !important;
+}
+
+.highlighted{
+	background-color: #111924 !important;
+}
+
+#date-range li{
+	color: black;
+	display: inline-block;
+	padding: 5px;
+	border: 1px solid;
+	background-color: white;
+}
+#date-range li:hover{
+	background-color: #383F59;
+	cursor: pointer;
+}
+#line-graph {
+	background-color: #25292f;
+	border-radius: 15px;
+	padding: 15px;
+}
+#profit {
+	background-color: #303844;
+	border-radius: 15px;
+	padding: 15px;
+	height: 100%;
+}
+
 #trades{
 	overflow-y: auto;
 	max-height: 100px;
 }
-#footer{
-	background-color: yellow;
-}
-#date-range{
-	background-color: orange;
-	list-style: none;
-}
-#date-range ul{
-	display: inline-block;
-	padding: 0;
-	border: 1px solid;
-}
-#date-range li{
-	display: inline-block;
-	float: left;
-	padding: 5px;
-	border: 1px solid;
-}
-#date-range li:hover{
-	background-color: blue;
-	cursor: pointer;
-}
-.highlighted{
-	background-color: red !important;
-}
-.results{
-	padding: 0;
-	list-style: none;
-	border: 1px solid black;
-}
-
-.results li{ 
-	background: LightSlateGray; 
-	padding-left: 10px;
-}
-.results li:nth-child(odd){ 
-	background: LightSteelBlue; 
+#time-stamps{
+	background-color: #383F59;
+	padding: 10px;
+	border-radius: 10px;
 }
